--- a/src/app/indexer/town/town.component.html
+++ b/src/app/indexer/town/town.component.html
@@ -1,6 +1,6 @@
 <div style="min-height: calc(100vh - 160px);">
 
-	<mat-card class="search-card"*ngIf="!embedded">
+	<mat-card class="search-card">
 		<app-index-search></app-index-search>
 	</mat-card>
 
