--- a/src/app/indexer/search/search.component.html
+++ b/src/app/indexer/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="top-container" *ngIf="indexKey != ''">
+<div class="top-container">
   <div fxLayout="column" fxLayout.gt-xs="row" fxLayoutGap="5px">
     <mat-card fxFlex>
       <mat-card-content>
@@ -6,8 +6,7 @@
         <div class="search-container container-fluid">
 
           <div class="row">
-            <!--<h4 class="text-center index-search-title gd-secondary">Search collected intel for index <span class="gd-primary">{{indexKey}}</span>:</h4>-->
-            <div class="col-sm-3 search-group">
+            <div class="col-sm-4 search-group" [ngClass]="{'hidden-xs': !searching_players && num_results > 0}">
               <div id="sb-search-players" class="sb-search">
                 <form>
                   <input autocomplete="off" class="sb-search-input" placeholder="Search players..." type="search" value="" name="search" id="search-players" (keyup)="searchPlayers($event)">
@@ -16,7 +15,7 @@
                 </form>
               </div>
             </div>
-            <div class="col-sm-3 search-group">
+            <div class="col-sm-4 search-group" [ngClass]="{'hidden-xs': !searching_alliances && num_results > 0}">
               <div id="sb-search-alliances" class="sb-search">
                 <form>
                   <input autocomplete="off" class="sb-search-input" placeholder="Search alliances..." type="search" value="" name="search" id="search-alliances" (keyup)="searchAlliances($event)">
@@ -25,7 +24,7 @@
                 </form>
               </div>
             </div>
-            <div class="col-sm-3 search-group">
+            <div class="col-sm-4 search-group" [ngClass]="{'hidden-xs': !searching_towns && num_results > 0}">
               <div id="sb-search-towns" class="sb-search">
                 <form>
                   <input autocomplete="off" class="sb-search-input" placeholder="Search towns..." type="search" value="" name="search" id="search-towns" (keyup)="searchTowns($event)">
@@ -34,21 +33,12 @@
                 </form>
               </div>
             </div>
-            <div class="hidden-xs col-sm-3 search-group">
-              <div id="sb-search-islands" class="sb-search">
-                <form>
-                  <input autocomplete="off" class="sb-search-input" placeholder="Search islands..." type="search" value="" name="search" id="search-islands" (keyup)="searchIslands($event)">
-                  <input class="sb-search-submit" type="button" value="">
-                  <span class="sb-icon-search" (click)="doSearchIslands()"><i class="fa fa-globe" ></i></span>
-                </form>
-              </div>
-            </div>
           </div>
 
-          <div class="row">
+          <div class="row text-center">
 
             <!--Player results-->
-            <div *ngIf="searching_players" class="col-sm-3">
+            <div *ngIf="searching_players" class="col-xs-12 col-sm-12 col-md-5">
               <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
               <div *ngIf="players?.length < 1 && !loading" class="text-center">
                 <div class="alert alert-gd-1">
@@ -59,15 +49,23 @@
                 <div class="table">
                   <div class="row_custom header default">
                     <div class="cell custom-cell">Player name</div>
+                    <div class="cell">world</div>
                     <div class="cell">Intel</div>
                   </div>
 
                   <div *ngFor="let player of players" class="row_custom">
                     <div class="cell custom-cell">
-                      <a routerLink="/indexer/player/{{indexKey}}/{{world}}/{{player?.id}}">{{player?.name}}</a>
+                      <a routerLink="/intel/player/{{player?.world}}/{{player?.id}}">{{player?.name}}</a>
                     </div>
                     <div class="cell">
-                      <a routerLink="/indexer/player/{{indexKey}}/{{world}}/{{player?.id}}">{{player?.count}}</a>
+	                    <a routerLink="/points" [queryParams]="{world: player?.world}">
+	                      <span [outerHTML]="player?.world | WorldNamePipe"></span>
+	                    </a>
+                    </div>
+                    <div class="cell">
+                      <a routerLink="/intel/player/{{player?.world}}/{{player?.id}}">
+	                      {{player?.count}} <mat-icon style="opacity: 1; vertical-align: sub;" class="hidden-xs">launch</mat-icon>
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -81,14 +79,14 @@
                 <!--<button *ngIf="!hide_results" type="button" class="btn btn-link search-control" (click)="hide_results = true;">-->
                   <!--Hide results <i class="fa fa-caret-up"></i>-->
                 <!--</button>-->
-                <button type="button" class="btn btn-link search-control" (click)="searching_players = false; cdr.detectChanges();">
+                <button type="button" class="btn btn-link search-control" (click)="num_results = 0; searching_players = false; cdr.detectChanges();">
                   Close search results <i class="fa fa-close"></i>
                 </button>
               </div>
             </div>
 
             <!--Alliance results-->
-            <div *ngIf="searching_alliances" class="col-sm-3 col-sm-offset-3">
+            <div *ngIf="searching_alliances" class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
               <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
               <div *ngIf="alliances?.length < 1 && !loading" class="text-center">
                 <div class="alert alert-gd-1">
@@ -100,23 +98,33 @@
                   <div class="row_custom header default">
                     <div class="cell custom-cell">Alliance name</div>
                     <div class="cell hidden-xs">Rank</div>
-                    <div class="cell hidden-xs hidden-sm">Members</div>
+                    <!--<div class="cell hidden-xs hidden-sm">Members</div>-->
+                    <div class="cell hidden-xs">World</div>
                     <div class="cell hidden-xs">Points</div>
+                    <div class="cell hidden-xs">Intel</div>
                     <!--<div class="cell hidden-xs">Towns</div>-->
                   </div>
 
                   <div *ngFor="let alliance of alliances" class="row_custom">
                     <div class="cell custom-cell">
-                      <a routerLink="/indexer/alliance/{{indexKey}}/{{alliance?.world}}/{{alliance?.id}}">{{alliance?.name}}</a>
+                      <a routerLink="/intel/alliance/{{alliance?.world}}/{{alliance?.id}}">{{alliance?.name}}</a>
                     </div>
                     <div class="cell hidden-xs">
-                      {{alliance?.members}}
-                    </div>
-                    <div class="cell hidden-xs hidden-sm">
                       {{alliance?.rank}}
                     </div>
+                    <!--<div class="cell hidden-xs hidden-sm">-->
+                      <!--{{alliance?.members}}-->
+                    <!--</div>-->
+	                  <div class="cell hidden-xs">
+		                  <a routerLink="/points" [queryParams]="{world: alliance?.world}">
+			                  <span [outerHTML]="alliance?.world | WorldNamePipe"></span>
+		                  </a>
+	                  </div>
                     <div class="cell hidden-xs">
                       {{alliance?.points | NumberFilter}}
+                    </div>
+                    <div class="cell hidden-xs">
+                      <a routerLink="/intel/alliance/{{alliance?.world}}/{{alliance?.id}}"><mat-icon style="opacity: 1; vertical-align: sub;" class="hidden-xs">launch</mat-icon></a>
                     </div>
                     <!--<div class="cell hidden-xs">-->
                       <!--{{alliance?.towns}}-->
@@ -133,7 +141,7 @@
                 <!--<button *ngIf="!hide_results" type="button" class="btn btn-link search-control" (click)="hide_results = true;">-->
                   <!--Hide results <i class="fa fa-caret-up"></i>-->
                 <!--</button>-->
-                <button type="button" class="btn btn-link search-control" (click)="searching_alliances = false; cdr.detectChanges();">
+                <button type="button" class="btn btn-link search-control" (click)="num_results = 0; searching_alliances = false; cdr.detectChanges();">
                   Close search results <i class="fa fa-close"></i>
                 </button>
                 <!--<mat-spinner class="search-control" *ngIf="loading" strokeWidth="4" [diameter]="40"></mat-spinner>-->
@@ -142,7 +150,7 @@
             </div>
 
             <!--Town results-->
-            <div *ngIf="searching_towns" class="col-sm-3 col-sm-offset-6">
+            <div *ngIf="searching_towns" class="col-xs-12 col-sm-12 col-md-5 col-md-offset-7">
               <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
               <div *ngIf="towns?.length < 1 && !loading" class="text-center">
                 <div class="alert alert-gd-1">
@@ -154,18 +162,26 @@
                   <div class="row_custom header default">
                   <div class="cell custom-cell">Town name</div>
                   <div class="cell">Player</div>
+                  <div class="cell">world</div>
                   <div class="cell hidden-sm hidden-xs">Intel</div>
                 </div>
 
                   <div *ngFor="let town of towns" class="row_custom">
                     <div class="cell custom-cell">
-                      <a routerLink="/indexer/town/{{indexKey}}/{{world}}/{{town?.id}}">{{town?.name}}</a>
+                      <a routerLink="/intel/town/{{town?.world}}/{{town?.id}}">{{town?.name}}</a>
                     </div>
                     <div class="cell">
-                      <a routerLink="/indexer/player/{{indexKey}}/{{world}}/{{town?.player_id}}">{{town?.player_name}}</a>
+                      <a routerLink="/intel/player/{{town?.world}}/{{town?.player_id}}">{{town?.player_name}}</a>
                     </div>
+	                  <div class="cell">
+		                  <a routerLink="/points" [queryParams]="{world: town?.world}">
+			                  <span [outerHTML]="town?.world | WorldNamePipe"></span>
+		                  </a>
+	                  </div>
                     <div class="cell hidden-sm hidden-xs">
-                      <a routerLink="/indexer/town/{{indexKey}}/{{world}}/{{town?.id}}">{{town?.count}}</a>
+                      <a routerLink="/intel/town/{{town?.world}}/{{town?.id}}">
+	                      {{town?.count}} <mat-icon style="opacity: 1; vertical-align: sub;" class="hidden-xs">launch</mat-icon>
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -180,64 +196,11 @@
                 <!--<button *ngIf="!hide_results" type="button" class="btn btn-link search-control" (click)="hide_results = true;">-->
                   <!--Hide results <i class="fa fa-caret-up"></i>-->
                 <!--</button>-->
-                <button type="button" class="btn btn-link search-control" (click)="searching_towns = false; cdr.detectChanges();">
+                <button type="button" class="btn btn-link search-control" (click)="num_results = 0; searching_towns = false; cdr.detectChanges();">
                   Close search results <i class="fa fa-close"></i>
                 </button>
                 <!--<mat-spinner class="search-control" *ngIf="loading" strokeWidth="4" [diameter]="40"></mat-spinner>-->
 
-              </div>
-            </div>
-
-            <!--Island results-->
-            <!--173399-->
-            <div *ngIf="searching_islands" class="col-sm-3 col-sm-offset-9">
-              <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
-              <div *ngIf="invalid_island" class="text-center">
-                <div class="alert alert-gd-1">
-                  <h3>Island does not exist '<span class="gd-secondary">{{islandInput}}</span>'</h3>
-                </div>
-              </div>
-              <div *ngIf="towns?.length < 1 && !loading && !invalid_island" class="text-center">
-                <div class="alert alert-gd-1">
-                  <h3>No intel found for <span class="gd-secondary">{{islandInput}}</span></h3>
-                </div>
-              </div>
-              <div *ngIf="!hide_results && num_results > 0 && !loading" id="search_output_islands">
-                <div class="table">
-                  <div class="row_custom header default">
-                    <div class="cell custom-cell">Town name</div>
-                    <div class="cell">Player</div>
-                    <div class="cell hidden-sm hidden-xs">Intel</div>
-                  </div>
-
-                  <div *ngFor="let town of towns" class="row_custom">
-                    <div class="cell custom-cell">
-                      <a routerLink="/indexer/town/{{indexKey}}/{{world}}/{{town?.id}}">{{town?.name}}</a>
-                    </div>
-                    <div class="cell">
-                      <a routerLink="/indexer/player/{{indexKey}}/{{world}}/{{town?.player_id}}">{{town?.player_name}}</a>
-                    </div>
-                    <div class="cell hidden-sm hidden-xs">
-                      <a routerLink="/indexer/town/{{indexKey}}/{{world}}/{{town?.id}}">{{town?.count}}</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div *ngIf="!loading" fxLayout="row" fxLayoutAlign="center center">
-                <!--<h4 style="margin: 0px;">Found {{num_results}} indexed <span style='color: #18BC9C;'>town{{num_results!=1? 's':''}}</span> on island <span style='color: #18BC9C;'>{{islandInput}}</span></h4>-->
-                <!--<button *ngIf="hide_results" type="button" class="btn btn-link search-control" (click)="hide_results = false;">-->
-                  <!--Show results <i class="fa fa-caret-down"></i>-->
-                <!--</button>-->
-                <!--<button *ngIf="!hide_results" type="button" class="btn btn-link search-control" (click)="hide_results = true;">-->
-                  <!--Hide results <i class="fa fa-caret-up"></i>-->
-                <!--</button>-->
-                <button *ngIf="num_results > 0" name="open_bb" class="btn btn-success btn-xs" (click)="openBBdialog('island')">
-                  <i class="fa fa-code"></i> BB code
-                </button>
-                <button type="button" class="btn btn-link search-control" (click)="searching_islands = false; cdr.detectChanges();">
-                  Close search results <i class="fa fa-close"></i>
-                </button>
               </div>
             </div>
 
