--- a/src/styles.scss
+++ b/src/styles.scss
@@ -782,6 +782,12 @@ fieldset[disabled] .btn-secondary.active {
   background-color: #18BC9C;
   border-color: #18BC9C;
   font-weight: 700;
+  .mat-icon {
+    font-size: 20px !important;
+    height: 20px !important;
+    width: 20px !important;
+    vertical-align: top !important;
+  }
 }
 .btn-success:hover,
 .btn-success:focus,
